--- a/Pathfinding/index.html
+++ b/Pathfinding/index.html
@@ -5,6 +5,9 @@
 <title>Pathfinding Workshop</title>
 <meta charset="utf-8">
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/AABB.js"></script>
+<script src="js/spatialHash.js"></script>
 <script src="js/pathfinding.js"></script>
 <script src="js/main.js"></script>
 
