Relabeled PerlinNoise to Noise

--- a/Noise/index.html
+++ b/Noise/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="utf8" />
-<title>Spatial Hashing Demo</title>
+<title>Noise Generation</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="js/PerlinNoise.js"></script>
+<script src="js/ValueNoise.js"></script>
 
 <style>
 	body, html {
