--- a/Pathfinding/index.html
+++ b/Pathfinding/index.html
@@ -9,6 +9,7 @@
 <script src="js/AABB.js"></script>
 <script src="js/spatialHash.js"></script>
 <script src="js/pathfinding.js"></script>
+<script src="js/simplex-noise.js"></script>
 <script src="js/main.js"></script>
 
 <style>
