--- a/Demo/index.html
+++ b/Demo/index.html
@@ -3,10 +3,41 @@
 <head>
 	<title>Tower Defense | JS Collision Tools Demo</title>
 	<meta charset="utf-8">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/AABB.js"></script>
 	<script src="js/spatialHash.js"></script>
 	<script src="js/pathfinding.js"></script>
 	<script src="js/main.js"></script>
+	
+	<style>
+		body, html {
+			margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+			background-color: #8b8e89;
+		}
+		
+		#site-container {
+			display: table;
+			width: 100%;
+			height: 100%;
+		}
+		
+		#site-container .cell {
+			display: table-cell;
+			vertical-align: middle;
+		}
+	
+		#canvas {
+			width: 800px;
+			height: 800px;
+			background-color: #fff;
+			margin: 0px auto;
+			display: block;
+		}
+	</style>
 </head>
 
 <body>
