Begun enemy implementation

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -4,6 +4,7 @@
 	<title>Tower Defense | JS Collision Tools Demo</title>
 	<meta charset="utf-8">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.7/uuid.min.js"></script>
 	<script src="js/AABB.js"></script>
 	<script src="js/spatialHash.js"></script>
 	<script src="js/pathfinding.js"></script>
